# slack-scan-github-release

./: .gitignore  .secret.example  README.md  pyproject.toml  slack_github_releases.py
