[project]
name = "slack-github-release-scanner"
version = "0.1.0"
description = "SlackチャンネルからGitHubのリリース通知を抽出するスクリプト"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "slack-sdk>=3.23.0",
    "requests>=2.31.0",
]

[project.scripts]
slack-scan = "slack_github_releases:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
